Refactor categories.html for improved structure

--- a/categories.html
+++ b/categories.html
@@ -7,44 +7,56 @@ permalink: /categories/
 <h1>Categories</h1>
 
 <p style="max-width: 60rem;">
-Browse chapters by theme. If you want the intended reading order and progress statuses, use <a href="{{ '/chapters/' | relative_url }}">All chapters</a>.
+Browse chapters by theme. This page is grouped by book, then category.
+If you want the intended reading order and progress statuses, use
+<a href="{{ '/chapters/' | relative_url }}">All chapters</a>.
 </p>
 
-{% assign cats = site.chapters | map: "category" | uniq | sort %}
+{% assign books = "wrong,right" | split: "," %}
 
-{% comment %}
-Design goals:
-- No duplicate category navigation + repeated headers
-- Category sections act as the navigation
-- No order numbers, no status labels (keep this page for browsing)
-- Show summaries for quick scanning
-{% endcomment %}
+{% for b in books %}
+  {% assign chapters_in_book = site.chapters | where: "book", b %}
+  {% if chapters_in_book and chapters_in_book.size > 0 %}
 
-<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 1.25rem; margin-top: 1.25rem;">
+    <h2 style="margin-top: 2rem;">
+      {% if b == "wrong" %}Of Course It Went Wrong{% else %}Of Course It Went Right{% endif %}
+    </h2>
 
-  {% for cat in cats %}
-    {% if cat %}
-      {% assign items = site.chapters | where: "category", cat | sort: "title" %}
+    {% assign cats = chapters_in_book | map: "category" | uniq | sort %}
 
-      <section style="border: 1px solid #e6e6e6; border-radius: 10px; padding: 1rem 1rem 0.75rem 1rem;">
-        <h2 style="margin: 0 0 0.75rem 0;">{{ cat }}</h2>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 1.25rem; margin-top: 1.25rem;">
+      {% for cat in cats %}
+        {% if cat %}
+          {% assign items = chapters_in_book | where: "category", cat | sort: "order" %}
+          {% assign cat_desc = site.data.category_meta[b][cat] %}
 
-        <ul style="list-style: none; padding-left: 0; margin: 0;">
-          {% for c in items %}
-            <li style="padding: 0.6rem 0; border-top: 1px solid #f0f0f0;">
-              <div style="font-weight: 600;">
-                <a href="{{ c.url | relative_url }}">{{ c.title }}</a>
+          <section id="{{ b }}-{{ cat | slugify }}" style="border: 1px solid #e6e6e6; border-radius: 10px; padding: 1rem 1rem 0.75rem 1rem;">
+            <h3 style="margin: 0 0 0.35rem 0;">{{ cat }}</h3>
+
+            {% if cat_desc %}
+              <div style="opacity: 0.85; margin-bottom: 0.75rem;">
+                {{ cat_desc }}
               </div>
-              {% if c.summary %}
-                <div style="margin-top: 0.25rem; opacity: 0.85;">
-                  {{ c.summary }}
-                </div>
-              {% endif %}
-            </li>
-          {% endfor %}
-        </ul>
-      </section>
-    {% endif %}
-  {% endfor %}
+            {% endif %}
 
-</div>
+            <ul style="list-style: none; padding-left: 0; margin: 0;">
+              {% for c in items %}
+                <li style="padding: 0.6rem 0; border-top: 1px solid #f0f0f0;">
+                  <div style="font-weight: 600;">
+                    <a href="{{ c.url | relative_url }}">{{ c.title }}</a>
+                  </div>
+                  {% if c.summary %}
+                    <div style="margin-top: 0.25rem; opacity: 0.85;">
+                      {{ c.summary }}
+                    </div>
+                  {% endif %}
+                </li>
+              {% endfor %}
+            </ul>
+          </section>
+        {% endif %}
+      {% endfor %}
+    </div>
+
+  {% endif %}
+{% endfor %}
